; ModuleID = '/home/carl/AnghaBench/linux/crypto/asymmetric_keys/extr_pkcs7_key_type.c_pkcs7_preparse.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/asymmetric_keys/extr_pkcs7_key_type.c_pkcs7_preparse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.key_preparsed_payload = type { i32, i32 }

@pkcs7_usage = common dso_local global i32 0, align 4
@NR__KEY_BEING_USED_FOR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Invalid usage type %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@VERIFY_USE_SECONDARY_KEYRING = common dso_local global i32 0, align 4
@pkcs7_view_content = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.key_preparsed_payload*)* @pkcs7_preparse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pkcs7_preparse(%struct.key_preparsed_payload* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.key_preparsed_payload*, align 8
  %4 = alloca i32, align 4
  store %struct.key_preparsed_payload* %0, %struct.key_preparsed_payload** %3, align 8
  %5 = load i32, i32* @pkcs7_usage, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @NR__KEY_BEING_USED_FOR, align 4
  %8 = icmp uge i32 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @pr_err(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %2, align 4
  br label %26

14:                                               ; preds = %1
  %15 = load %struct.key_preparsed_payload*, %struct.key_preparsed_payload** %3, align 8
  %16 = getelementptr inbounds %struct.key_preparsed_payload, %struct.key_preparsed_payload* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.key_preparsed_payload*, %struct.key_preparsed_payload** %3, align 8
  %19 = getelementptr inbounds %struct.key_preparsed_payload, %struct.key_preparsed_payload* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @VERIFY_USE_SECONDARY_KEYRING, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* @pkcs7_view_content, align 4
  %24 = load %struct.key_preparsed_payload*, %struct.key_preparsed_payload** %3, align 8
  %25 = call i32 @verify_pkcs7_signature(i32* null, i32 0, i32 %17, i32 %20, i32 %21, i32 %22, i32 %23, %struct.key_preparsed_payload* %24)
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %14, %9
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @pr_err(i8*, i32) #1

declare dso_local i32 @verify_pkcs7_signature(i32*, i32, i32, i32, i32, i32, i32, %struct.key_preparsed_payload*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
